Setup typography and fonts

--- a/src/assets/external-styles/bootstrap/_variables.scss
+++ b/src/assets/external-styles/bootstrap/_variables.scss
@@ -8,7 +8,7 @@ $white: #fff;
 ////////////////////
 // Fonts
 //
-$font-family-base: 'ProximaNova', serif;
+$font-family-base: 'Questrial', serif;
 
 $font-sizes: (
   1: var(--fs-plus-6),
