--- a/src/assets/external-styles/bootstrap/_variables.scss
+++ b/src/assets/external-styles/bootstrap/_variables.scss
@@ -1,8 +1,7 @@
 ////////////////////
 // Colors
 //
-$primary: #5e3687;
-$secondary: #40b5a6;
+$primary: #292929;
 $white: #fff;
 
 ////////////////////
