--- a/src/assets/external-styles/bootstrap/_index.scss
+++ b/src/assets/external-styles/bootstrap/_index.scss
@@ -3,6 +3,7 @@
 @import 'variables';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/maps';
 @import '~bootstrap/scss/utilities';
 
 // Layout & components
